# Taller

./: .autotools  .cproject  .gitignore  .project  CMakeLists.txt  Jugador.cpp  Makefile  Partido.cpp  README.md  Resultado.h  main.cpp  untitled1
prueba-sockets/dep/: Socket.d  main.d
prueba-sockets/src/: Socket.cpp  constants.h  main.cpp
res/: Equipo1.yaml  Equipo2.yaml  Equipo_Rojo.yaml  Equipo_Verde.yaml  GeneralConfig.yaml
src/: Animation.cpp  Animation.h  BallController.cpp  BallController.h  BallModel.cpp  BallModel.h  BallView.cpp  BallView.h  Camera.cpp  Camera.h  Entity.h  GameConstants.h  Log.cpp  Log.h  Partido.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerControllerAI.cpp  PlayerControllerAI.h  PlayerControllerHuman.cpp  PlayerControllerHuman.h  PlayerModel.cpp  PlayerModel.h  PlayerView.cpp  PlayerView.h  Resultado.cpp  Socket.h  Surface.cpp  Surface.h  TeamFactory.cpp  TeamFactory.h  Texto.cpp  Texto.h  TextureSetter.cpp  TextureSetter.h  World.cpp  World.h  YAMLReader.cpp  (+2 more)
src/client/: Animation.cpp  Animation.h  Ball.cpp  Ball.h  BallController.cpp  BallController.h  BallModel.cpp  BallModel.h  BallView.cpp  BallView.h  Camera.cpp  Camera.h  CommandSender.cpp  CommandSender.h  Entity.h  Equipo.h  GameConnectionError.cpp  GameConnectionError.h  GameConstants.h  GameManager.cpp  GameManager.h  GameMenu.cpp  GameMenu.h  GameSelectTeam.cpp  GameSelectTeam.h  InfoPanel.cpp  InfoPanel.h  ListenStart.cpp  ListenStart.h  MiniMap.cpp  MiniMap.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  PlayerControllerAI.cpp  PlayerControllerAI.h  PlayerControllerHuman.cpp  PlayerControllerHuman.h  PlayerModel.cpp  (+21 more)
src/common/: Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventQueue.cpp  EventQueue.h  GameConstants.h  Log.cpp  Log.h  Protocol.cpp  Protocol.h  Request.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  SpriteInfoSetter.cpp  SpriteInfoSetter.h  YAMLReader.cpp  YAMLReader.h
src/server/: Game.h  (+39 more)
(+30 files in other folders)
